--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "variable-colors": "./cli.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,10 @@
     "css-color-extractor": "^0.0.5",
     "postcss": "^5.0.2",
     "yargs": "^3.22.2"
+  },
+  "devDependencies": {
+    "chai": "^3.2.0",
+    "mocha": "^3.4.2"
   },
   "author": "Jack Lightbody <jack.lightbody+npm@gmail.com>",
   "license": "ISC",
